--- a/ec1.ipynb
+++ b/ec1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "dist+=a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "costs=tspa[['val']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_m=dist+costs"
    ]
   },
   {
@@ -76,11 +94,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nn(starting_point, dist_matrix):\n",
+    "def nn(starting_point, cost_matrix):\n",
     "    s=[starting_point]\n",
     "    for x in range(99):\n",
-    "        f=dist_matrix[s[-1]]\n",
-    "        s.append(f.argmin())\n",
+    "        f=cost_matrix[s[-1]]\n",
+    "        p=np.arange(0,200)\n",
+    "        a=list(zip(f,p)).sort()\n",
+    "        for node in a\n",
     "    return s"
    ]
   }
