--- a/lab1/ec1.ipynb
+++ b/lab1/ec1.ipynb
@@ -32,35 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist=distance_matrix(coordinates, coordinates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dist=distance_matrix(coordinates, coordinates)\n",
     "dist=np.round(dist)\n",
-    "a=np.eye(200)*9999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dist+=a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,34 +61,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_random_solution():\n",
-    "    a=np.arange(0,200)\n",
+    "def get_random_solution(n: int):\n",
+    "    a=np.arange(0,n)\n",
     "    np.random.shuffle(a)\n",
-    "    return a[:100]"
+    "    return a[:n//2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nn(starting_point, cost_matrix):\n",
-    "    s=[starting_point]\n",
-    "    for x in range(99):\n",
-    "        f=cost_matrix[s[-1]]\n",
-    "        p=np.arange(0,200)\n",
-    "        a=list(zip(f,p))\n",
-    "        a.sort()\n",
-    "        for node in a:\n",
-    "            if node[1] not in s:\n",
-    "                s.append(node[1])\n",
-    "                break\n",
-    "    return s"
+    "def nn(starting_point: int, cost_matrix: np.ndarray):\n",
+    "    result_list=[starting_point]\n",
+    "    n = cost_matrix.shape[0]\n",
+    "    for x in range(n-1):\n",
+    "        distances=cost_matrix[result_list[-1]]\n",
+    "        indices=np.arange(0,n)\n",
+    "        di_pairs=[(d, i) for d, i in zip(distances,indices) if i not in result_list]\n",
+    "        nearest_neighbor = min(di_pairs)\n",
+    "        result_list.append(nearest_neighbor[1])\n",
+    "    return result_list"
    ]
   }
  ],
@@ -125,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
