--- a/lab1/ec1.ipynb
+++ b/lab1/ec1.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
     "    cost_matrix = cost_matrix.T\n",
     "    result_list=[starting_point]\n",
     "    n = cost_matrix.shape[0]\n",
-    "    for x in range(n//2-1):\n",
+    "    while(len(result_list) < np.ceil(n/2)):\n",
     "        distances=cost_matrix[result_list[-1]]\n",
     "        indices=np.arange(0,n)\n",
     "        di_pairs=[(d, i) for d, i in zip(distances,indices) if i not in result_list]\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
