--- a/lab1/ec1.ipynb
+++ b/lab1/ec1.ipynb
@@ -114,6 +114,38 @@
    ]
   },
   {
+    "cell_type": "code",
+    "execution_count": 444,
+    "metadata": {},
+    "outputs": [],
+    "source": [
+     "def nn_whole_path(start_index: int, distance_matrix: np.ndarray, costs: np.ndarray) -> List[int]:\n",
+     "    cost_matrix = (distance_matrix + costs).T\n",
+     "    num_nodes = len(distance_matrix)\n",
+     "    nodes_to_visit = num_nodes // 2  \n",
+     "    \n",
+     "    current_path = [start_index]\n",
+     "    unvisited = set(range(num_nodes)) - {start_index}\n",
+     "    \n",
+     "    while len(current_path) < nodes_to_visit:\n",
+     "        nearest_node = None\n",
+     "        nearest_distance = float('inf')\n",
+     "        insert_after = None\n",
+     "        for i, path_node in enumerate(current_path):\n",
+     "            for unvisited_node in unvisited:\n",
+     "                distance = cost_matrix[path_node][unvisited_node]\n",
+     "                if distance < nearest_distance:\n",
+     "                    nearest_distance = distance\n",
+     "                    nearest_node = unvisited_node\n",
+     "                    insert_after = i\n",
+     "        \n",
+     "        current_path.insert(insert_after + 1, nearest_node)\n",
+     "        unvisited.remove(nearest_node)\n",
+     "    \n",
+     "    return current_path"
+    ]
+   },
+  {
    "cell_type": "code",
    "execution_count": 441,
    "metadata": {},
