add neighborhood implementation

--- a/lab3/ec3.ipynb
+++ b/lab3/ec3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        " [None, None, None, None, None, None, None, None, None, None]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,12 +109,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def node_neighborhood(solution: List[int], cost_matrix: np.ndarray, i: int):\n",
-    "    "
+    "class EdgeNeighborhood:\n",
+    "    def __init__(self, dist_mat, n) -> None:\n",
+    "        self.dist_mat = dist_mat\n",
+    "        self.indexes = list()\n",
+    "        for i in range(n-1):\n",
+    "            for j in range(i+1, n):\n",
+    "                self.indexes.append((i,j))\n",
+    "\n",
+    "    def neighborhood_size(self):\n",
+    "        return len(self.indexes)\n",
+    "    \n",
+    "    def get_difference(self, ind, solution: List[int], unselected):\n",
+    "        n = len(solution)\n",
+    "        i, j = self.indexes[ind]\n",
+    "        i1 = solution[(i-1)%n]\n",
+    "        i2 = solution[i]\n",
+    "        i3 = solution[(i+1)%n]\n",
+    "\n",
+    "        j1 = solution[(j-1)%n]\n",
+    "        j2 = solution[j%n]\n",
+    "        j3 = solution[(j+1)%n]\n",
+    "        #edge case when two consecutive nodes selected\n",
+    "        if i-j == -1:\n",
+    "            return -self.dist_mat[i1, i2] - self.dist_mat[i2, j2] - self.dist_mat[j2, j3] \\\n",
+    "                + self.dist_mat[i1, j2] + self.dist_mat[j2, i2] + self.dist_mat[i2, j3]\n",
+    "        \n",
+    "        difference = -self.dist_mat[i1, i2] - self.dist_mat[i2, i3] - self.dist_mat[j1, j2] - self.dist_mat[j2, j3] \\\n",
+    "            + self.dist_mat[i1, j2] + self.dist_mat[j2, i3] + self.dist_mat[j1, i2] + self.dist_mat[i2, j3]\n",
+    "        return difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InterNeighborhood:\n",
+    "    def __init__(self, dist_mat, n) -> None:\n",
+    "        self.dist_mat = dist_mat \n",
+    "        self.indexes = list()\n",
+    "        m = len(self.dist_mat) - n\n",
+    "        for i in range(n):\n",
+    "            for j in range(m):\n",
+    "                self.indexes.append((i,j))\n",
+    "\n",
+    "    def neighborhood_size(self):\n",
+    "        return len(self.indexes)\n",
+    "    \n",
+    "    def get_difference(self, ind, solution: List[int], unselected):\n",
+    "        n = len(solution)\n",
+    "        i, j = self.indexes[ind]\n",
+    "        i1 = solution[(i-1)%n]\n",
+    "        i2 = solution[i]\n",
+    "        i3 = solution[(i+1)%n]\n",
+    "\n",
+    "        j1 = unselected[j]\n",
+    "\n",
+    "        return -self.dist_mat[i1, i2] -self.dist_mat[i2, i3] + self.dist_mat[i1, j1] + self.dist_mat[j1, i3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CombinedNeighborhood:\n",
+    "    def __init__(self , neighborhoods) -> None:\n",
+    "        self.neighborhoods = neighborhoods\n",
+    "        self.size = sum(n.neighborhood_size() for n in self.neighborhoods)\n",
+    "\n",
+    "    def neighborhood_size(self):\n",
+    "        return self.size\n",
+    "    \n",
+    "    def get_difference(self, ind, solution: List[int], unselected):\n",
+    "        for neighborhood in self.neighborhoods:\n",
+    "            size = neighborhood.neighborhood_size()\n",
+    "            if ind < size:\n",
+    "                return neighborhood.get_difference(ind, solution, unselected)\n",
+    "            ind -= size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  8  3  3  4]\n",
+      " [ 7  1  6 12  7]\n",
+      " [ 1  5  2  4  4]\n",
+      " [ 0 10  3  3  9]\n",
+      " [ 0  4  2  8  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dist_m = np.random.randint(0, 10, size=(5,5))\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        if i == j:\n",
+    "            dist_m[i, j] = 0\n",
+    "        dist_m[i, j] = dist_m[j, i]\n",
+    "a = np.arange(5)\n",
+    "print(dist_m + a)\n",
+    "dist_m = dist_m + a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "neighborhood1 = EdgeNeighborhood(dist_m, 3)\n",
+    "for i in range(neighborhood1.neighborhood_size()):\n",
+    "    print(neighborhood1.get_difference(i, [0, 1, 2], [3, 4]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "-1\n",
+      "-8\n",
+      "-8\n",
+      "5\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "neighborhood2 = InterNeighborhood(dist_m, 3)\n",
+    "for i in range(neighborhood2.neighborhood_size()):\n",
+    "    print(neighborhood2.get_difference(i, [0, 1, 2], [3, 4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-2\n",
+      "0\n",
+      "5\n",
+      "-1\n",
+      "-8\n",
+      "-8\n",
+      "5\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "neighborhood3 = CombinedNeighborhood([neighborhood1, neighborhood2])\n",
+    "for i in range(neighborhood3.neighborhood_size()):\n",
+    "    print(neighborhood3.get_difference(i, [0, 1, 2], [3, 4]))"
    ]
   },
   {
@@ -123,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def steepest(starting_solution: List[int], distance_matrix: np.ndarray, costs: np.ndarray, get_neighborhood: Callable) -> list:\n",
+    "def greedy(starting_solution: List[int], distance_matrix: np.ndarray, costs: np.ndarray, get_neighborhood: Callable) -> list:\n",
     "    cost_matrix = (distance_matrix + costs).T\n",
     "    n = len(distance_matrix)\n",
     "    num_nodes_to_use = n // 2\n",
@@ -214,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
