finish lab4 implementation and report

--- a/lab4/ec4.ipynb
+++ b/lab4/ec4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,59 @@
     "sys.path.insert(1, '../utils')\n",
     "from utils import *\n",
     "from utils import plot_solution, greedy_2_regret_weighted, score\n",
-    "from typing import Callable\n",
+    "from typing import Callable, Any\n",
     "from abc import ABC, abstractmethod\n",
     "from sortedcontainers import SortedList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sys import maxsize\n",
+    "from typing import SupportsIndex\n",
+    "\n",
+    "\n",
+    "class CustomList(list):\n",
+    "    def __init__(self, *args):\n",
+    "        super().__init__(*args)  # Unpack *args here\n",
+    "        self.indexes = dict()\n",
+    "        for i, e in enumerate(self):\n",
+    "            self.indexes[e] = i\n",
+    "        self.ordered_list = list(range(len(self)))\n",
+    "\n",
+    "    def index(self, value: Any, start: SupportsIndex = 0, stop: SupportsIndex = sys.maxsize) -> int:\n",
+    "        return self.indexes[value]\n",
+    "    \n",
+    "    def __setitem__(self, index, value):\n",
+    "        if type(index) == slice:\n",
+    "            print(self.ordered_list)\n",
+    "        print(index)\n",
+    "        print(value)\n",
+    "        del self.indexes[self[index]]\n",
+    "        super().__setitem__(index, value)\n",
+    "        self.indexes[value] = index\n",
+    "        \n",
+    "\n",
+    "\n",
+    "l = CustomList([9, 4, 7])\n",
+    "# l[:2] = [3,2]\n",
+    "l.ordered_list\n",
+    "\n",
+    "    "
    ]
   },
   {
