--- a/lab6/ec6.ipynb
+++ b/lab6/ec6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,14 @@
     "from utils import plot_solution, greedy_2_regret_weighted, score, get_random_solution\n",
     "from typing import Callable, Tuple\n",
     "from abc import ABC, abstractmethod\n",
-    "from sortedcontainers import SortedList"
+    "from sortedcontainers import SortedList\n",
+    "import random\n",
+    "import numba"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +80,29 @@
     "            m = n - 1 if i == 1 else n\n",
     "            for j in range(i+1, m):\n",
     "                self.indexes.append((i,j))\n",
+    "        self.indexes=np.array(self.indexes)\n",
     "\n",
+    "        self.size=len(self.indexes)\n",
     "    def neighborhood_size(self):\n",
-    "        return len(self.indexes)\n",
-    "    \n",
+    "        return self.size\n",
+    "    def batch_get_differences(self, solution: List[int], unselected: SortedList, indexes=None):\n",
+    "        n = 100\n",
+    "        if indexes is None:\n",
+    "            indexes = np.arange(len(self.indexes))\n",
+    "        selected_indexes = self.indexes[indexes]\n",
+    "        i_vals, j_vals = selected_indexes[:, 0], selected_indexes[:, 1]\n",
+    "        s=np.array(solution)\n",
+    "        \n",
+    "        i1 = s[(i_vals - 1) % n]\n",
+    "        i2 = s[i_vals]\n",
+    "        j1 = s[j_vals]\n",
+    "        j2 = s[(j_vals + 1) % n]\n",
+    "\n",
+    "        # Vectorized computation of differences\n",
+    "        return -self.distance_matrix[i1, i2] - self.distance_matrix[j1, j2] \\\n",
+    "            + self.distance_matrix[i1, j1] + self.distance_matrix[i2, j2]\n",
     "    def get_difference(self, ind, solution: List[int], unselected: SortedList):\n",
-    "        n = len(solution)\n",
+    "        n = 100\n",
     "        i, j = self.indexes[ind]\n",
     "\n",
     "        i1 = solution[i - 1]\n",
@@ -120,10 +139,38 @@
     "        for i in range(n):\n",
     "            for j in range(m):\n",
     "                self.indexes.append((i,j))\n",
+    "        self.indexes=np.array(self.indexes)\n",
     "\n",
+    "        self.size=len(self.indexes)\n",
     "    def neighborhood_size(self):\n",
-    "        return len(self.indexes)\n",
-    "    \n",
+    "        return self.size\n",
+    "    def batch_get_differences(self, solution: List[int], unselected_list: List[int], indexes=None):\n",
+    "        if indexes is None:\n",
+    "            indexes = np.arange(len(self.indexes)) \n",
+    "        n = 100\n",
+    "        selected_indexes = self.indexes[indexes]\n",
+    "        indices_i, indices_j = selected_indexes[:, 0], selected_indexes[:, 1]\n",
+    "\n",
+    "        \n",
+    "        # Wrap-around for previous and next indices\n",
+    "        i_prev = (indices_i - 1) % n\n",
+    "        i_next = (indices_i + 1) % n\n",
+    "        s=np.array(solution)\n",
+    "        u=np.array(unselected_list)\n",
+    "        # Get node values\n",
+    "        node_prev = s[i_prev]\n",
+    "        node_current =s[indices_i]  \n",
+    "        node_next = s[i_next]\n",
+    "        node_unselected = u[indices_j]\n",
+    "\n",
+    "        # Compute differences\n",
+    "        differences = (\n",
+    "            -self.dist_mat[node_prev, node_current]\n",
+    "            - self.dist_mat[node_current, node_next]\n",
+    "            + self.dist_mat[node_prev, node_unselected]\n",
+    "            + self.dist_mat[node_unselected, node_next]\n",
+    "        )\n",
+    "        return differences\n",
     "    def get_difference(self, ind, solution: List[int], unselected):\n",
     "        n = len(solution)\n",
     "        i, j = self.indexes[ind]\n",
@@ -158,13 +205,37 @@
     "class CombinedNeighborhood(Neighborhood):\n",
     "    def __init__(self , neighborhoods: List[Neighborhood]) -> None:\n",
     "        self.neighborhoods = neighborhoods\n",
-    "        self.size = sum(n.neighborhood_size() for n in self.neighborhoods)\n",
-    "        self.indexes=[]\n",
-    "        for neighborhood in neighborhoods:\n",
-    "            self.indexes.extend(neighborhood.indexes)\n",
+    "     \n",
+    "        self.offsets = np.cumsum([0] + [n.neighborhood_size() for n in neighborhoods])\n",
+    "        self.size = self.offsets[-1]\n",
+    "        # Create a unified index array for the entire combined neighborhood\n",
+    "        self.indexes = np.concatenate(\n",
+    "            [n.indexes for  n in neighborhoods]\n",
+    "        )\n",
     "    def neighborhood_size(self):\n",
     "        return self.size\n",
-    "    \n",
+    "    def batch_get_differences(self, solution: List[int], unselected: SortedList, indexes=None):\n",
+    "        if indexes is None:\n",
+    "            differences = []\n",
+    "            for neighborhood in self.neighborhoods:\n",
+    "                differences.append(neighborhood.batch_get_differences(solution, unselected))\n",
+    "            # Concatenate differences into one array\n",
+    "            return np.concatenate(differences)\n",
+    "        else:\n",
+    "            differences = []\n",
+    "            idx=0\n",
+    "            \n",
+    "            id1=0\n",
+    "            for neighborhood in self.neighborhoods:\n",
+    "                idx+=neighborhood.size\n",
+    "                idxs=np.array(indexes)\n",
+    "                idxs=idxs[idxs>id1]\n",
+    "                idxs=idxs[idxs<idx] \n",
+    "                idxs=idxs-id1\n",
+    "                differences.append(neighborhood.batch_get_differences(solution, unselected, idxs))\n",
+    "                id1+=idx\n",
+    "            # Concatenate differences into one array\n",
+    "            return np.concatenate(differences)\n",
     "    def get_difference(self, ind, solution: List[int], unselected):\n",
     "        for neighborhood in self.neighborhoods:\n",
     "            size = neighborhood.neighborhood_size()\n",
@@ -190,96 +261,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SteepestLocalSearch:\n",
-    "    def __init__(self, starting_solution: List[int], distance_matrix: np.ndarray, costs: np.ndarray, neighborhood: 'Neighborhood'):\n",
-    "        self.solution = starting_solution.copy()\n",
-    "        self.distance_matrix = distance_matrix\n",
-    "        self.costs = costs\n",
-    "        self.neighborhood = neighborhood\n",
-    "        self.unselected = SortedList(range(len(costs)))\n",
-    "        for i in starting_solution:\n",
-    "            self.unselected.remove(i)\n",
-    "        self.LM = {} \n",
+    "def steepest(starting_solution: List[int], distance_matrix: np.ndarray, costs: np.ndarray, neighborhood: Neighborhood) -> list:\n",
+    "    unselected = SortedList(range(len(costs)))\n",
+    "    for i in starting_solution:\n",
+    "        unselected.remove(i)\n",
     "\n",
-    "    def initialize_moves(self):\n",
-    "        for i in range(self.neighborhood.neighborhood_size()):\n",
-    "            delta = self.neighborhood.get_difference(i, self.solution, self.unselected)\n",
-    "            if delta < 0: \n",
-    "                self.LM[i] = delta\n",
+    "    solution = starting_solution.copy()\n",
     "\n",
-    "    def update_moves(self, affected_indexes: List[int]):\n",
-    " \n",
-    "        for i in affected_indexes:\n",
-    "            delta = self.neighborhood.get_difference(i, self.solution, self.unselected)\n",
-    "            if delta < 0:\n",
-    "                self.LM[i] = delta \n",
-    "            elif i in self.LM:\n",
-    "                del self.LM[i]\n",
-    "\n",
-    "    def get_sorted_moves(self):\n",
-    "        return sorted(self.LM.items(), key=lambda x: x[1])\n",
-    "\n",
-    "    def is_move_applicable(self, move: Tuple[int, float]) -> bool:\n",
-    "        ind, _ = move\n",
-    "        i, j = self.neighborhood.indexes[ind]\n",
-    "        current_edges = {(self.solution[k], self.solution[(k + 1) % len(self.solution)]) for k in range(len(self.solution))}\n",
-    "        move_edges = {(self.solution[i - 1], self.solution[i]), (self.solution[j], self.solution[(j + 1) % len(self.solution)])}\n",
-    "        reversed_edges = {(b, a) for (a, b) in move_edges}\n",
-    "\n",
+    "    while True:\n",
+    "        objective_changes = neighborhood.batch_get_differences(solution, unselected)\n",
+    "        best_index = np.argmin(objective_changes)\n",
     "    \n",
-    "        if move_edges.isdisjoint(current_edges) and reversed_edges.isdisjoint(current_edges):\n",
-    "            return 0 \n",
-    "        elif move_edges.issubset(reversed_edges):\n",
-    "            return 2  \n",
-    "        return 1  \n",
-    "\n",
-    "    def apply_move(self, move: Tuple[int, float]) -> List[int]:\n",
-    "        ind, _ = move\n",
-    "        affected_indexes = self.neighborhood.get_affected_indexes(ind, self.solution)\n",
-    "        self.solution = self.neighborhood.modify_solution(ind, self.solution, self.unselected)\n",
-    "        return affected_indexes\n",
-    "\n",
-    "    def steepest_search(self):\n",
-    "        self.initialize_moves()  \n",
-    "        while True:\n",
-    "            move_found = False\n",
-    "            sorted_LM = self.get_sorted_moves()  \n",
-    "\n",
-    "            for move in sorted_LM:\n",
-    "                app = self.is_move_applicable(move)\n",
-    "                if app == 1:\n",
-    "                    affected_indexes = self.apply_move(move) \n",
-    "                    del self.LM[move[0]]  \n",
-    "                    self.update_moves(affected_indexes) \n",
-    "                    move_found = True\n",
-    "                    break\n",
-    "                elif app == 2:\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    del self.LM[move[0]]  \n",
-    "\n",
-    "            if not move_found:\n",
-    "                return self.solution  \n",
-    "\n"
+    "        if objective_changes[best_index] >= 0:\n",
+    "            return solution\n",
+    "    \n",
+    "        solution = neighborhood.modify_solution(best_index, solution, unselected)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def msls(number_of_iterations, distance_matrix, costs, neighborhood):\n",
+    "def msls( distance_matrix, costs, neighborhood,number_of_iterations=200):\n",
     "    solutions=[get_random_solution(200) for x in range(number_of_iterations)]\n",
     "    best_fit=999999999\n",
     "    best_sol=None\n",
     "    for sol in solutions:\n",
-    "        st=SteepestLocalSearch(sol, dist, costs, neighborhood)\n",
-    "        s=st.steepest_search()\n",
+    "        s=steepest(sol, dist, costs, neighborhood)\n",
     "        if score(s, distance_matrix, costs) < best_fit:\n",
     "            best_fit=score(s, distance_matrix, costs)\n",
     "            best_sol=s\n",
@@ -288,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,13 +313,13 @@
     "    start_time=time.time()\n",
     "    i=0\n",
     "    previous_score=score(x, distance_matrix, costs)\n",
-    "    while time.time()-start_time<200:\n",
+    "    while time.time()-start_time<25:\n",
     "        y=x.copy()\n",
     "        for function in pert_f:\n",
     "            y=function(y)\n",
     "        \n",
-    "        st=SteepestLocalSearch(y, dist, costs, neighborhood)\n",
-    "        y=st.steepest_search()\n",
+    "        y=steepest(y, dist, costs, neighborhood)\n",
+    "      \n",
     "        scor=score(y, distance_matrix, costs)\n",
     "        if scor<previous_score:\n",
     "            x=y\n",
@@ -318,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,36 +400,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s=msls(200, dist, costs, neighborhood)"
+    "def test_method(Neighborhood: CombinedNeighborhood, dist, costs, coordinates, name='',pert_f=None):\n",
+    "    scores_2=[]\n",
+    "    sols_2=[]\n",
+    "    times = list()\n",
+    "    for x in range(20):\n",
+    "\n",
+    "\n",
+    "        begin_time = time.time()\n",
+    "        if pert_f is None:\n",
+    "            solution_2=msls( dist, costs, Neighborhood)\n",
+    "        else:\n",
+    "            solution_2=ils(pert_f, dist, costs, Neighborhood)\n",
+    "     \n",
+    "        times.append(time.time() - begin_time)\n",
+    "\n",
+    "        solution_2 = [int(e) for e in solution_2]\n",
+    "        sols_2.append(solution_2)\n",
+    "\n",
+    "        scores_2.append(score(solution_2, dist, costs))   \n",
+    "\n",
+    "    print('scores: ', min(scores_2), sum(scores_2)/len(scores_2), max(scores_2))\n",
+    "    print(sols_2[scores_2.index(min(scores_2))])\n",
+    "    print(f'execution time: {min(times)} {sum(times)/len(times)} {max(times)}')\n",
+    "    plot_solution(sols_2[scores_2.index(min(scores_2))], coordinates, costs, f'best solution for {name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 200\n",
+    "interNeighborhood = InterNeighborhood(dist, costs, n // 2)\n",
+    "edgeNeighborhood = EdgeNeighborhood(dist, costs, n // 2)\n",
+    "neighborhood = CombinedNeighborhood([edgeNeighborhood, interNeighborhood])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol=msls(dist, costs, neighborhood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72117"
+       "71808"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score(s, dist, costs)"
+    "score(sol, dist, costs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69694"
+       "70227"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "70614"
+       "70115"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,16 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71750"
+       "74091"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "70339"
+       "70349"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "70823"
+       "70376"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69985"
+       "69911"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
